--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,10 +17,11 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  meta: ">=1.1.0 <2.0.0"
+  equatable: ^0.2.0
+  flutter_bloc: ^0.19.0
   flutter:
     sdk: flutter
-  flutter_bloc: ^0.19.0
-  equatable: ^0.2.0
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
