--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   meta: ">=1.1.0 <2.0.0"
   equatable: ^0.2.0
   flutter_bloc: ^0.19.0
+  quiver: '>=2.0.0 <3.0.0'
   flutter:
     sdk: flutter
   
